refactor: trait-based architecture for the refunder crate
partial revert of commit f098c48f757f37e84c2107942e97a0b96479f9bb

--- a/crates/refunder/Cargo.toml
+++ b/crates/refunder/Cargo.toml
@@ -29,6 +29,10 @@ tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
 tracing = { workspace = true }
 url = { workspace = true }
 
+[dev-dependencies]
+mockall = { workspace = true }
+rstest = { workspace = true }
+
 [lints]
 workspace = true
 
