--- a/crates/driver/Cargo.toml
+++ b/crates/driver/Cargo.toml
@@ -72,6 +72,11 @@ observe = { workspace = true, features = ["axum-tracing"] }
 shared = { workspace = true }
 solver = { workspace = true }
 tracing = { workspace = true }
+primitive-types = { workspace = true }
+pod-sdk = { workspace = true }
+derivative = { workspace = true }
+autopilot = { workspace = true }
+winner-selection = { workspace = true }
 
 [dev-dependencies]
 app-data = { workspace = true, features = ["test_helpers"] }
