--- a/crates/contracts/cannonfile.toml
+++ b/crates/contracts/cannonfile.toml
@@ -4,9 +4,11 @@ version = "1.0.0"
 [deploy.Balances]
 artifact = "Balances"
 create2 = true
+ifExists = "continue"
 salt = "<%= HashZero %>"
 
 [deploy.Signatures]
 artifact = "Signatures"
 create2 = true
+ifExists = "continue"
 salt = "<%= HashZero %>"
