--- a/crates/solvers/Cargo.toml
+++ b/crates/solvers/Cargo.toml
@@ -48,7 +48,7 @@ url = { workspace = true, features = ["serde"] }
 anyhow = { workspace = true }
 contracts = { workspace = true }
 model = { workspace = true }
-observe = { workspace = true, features = ["axum-tracing"] }
+observe = { workspace = true }
 shared = { workspace = true }
 solver = { workspace = true }
 tracing = { workspace = true }
