--- a/crates/observe/Cargo.toml
+++ b/crates/observe/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-axum = { workspace = true, optional = true }
+axum = { workspace = true }
 atty = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true, features = ["now"] }
@@ -26,7 +26,6 @@ tokio = { workspace = true, features = ["fs"] }
 tracing = { workspace = true }
 tracing-opentelemetry = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time"] }
-warp = { workspace = true }
 tracing-serde = { workspace = true }
 jemalloc_pprof = { workspace = true }
 
@@ -35,5 +34,4 @@ workspace = true
 
 [features]
 default = []
-axum-tracing = ["dep:axum"]
 tokio-console = ["dep:console-subscriber"]
