--- a/crates/testlib/Cargo.toml
+++ b/crates/testlib/Cargo.toml
@@ -8,9 +8,10 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 alloy = {workspace = true}
 anyhow = { workspace = true }
-hex-literal = { workspace = true }
-maplit = { workspace = true }
 serde_json = { workspace = true }
+
+[dev-dependencies]
+maplit = { workspace = true }
 
 [lints]
 workspace = true
