restore warp for orderbook

--- a/crates/observe/Cargo.toml
+++ b/crates/observe/Cargo.toml
@@ -27,6 +27,7 @@ tracing = { workspace = true }
 tracing-opentelemetry = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time"] }
 tracing-serde = { workspace = true }
+warp = { workspace = true }
 jemalloc_pprof = { workspace = true }
 
 [lints]
@@ -34,5 +35,4 @@ workspace = true
 
 [features]
 default = []
-axum-tracing = ["dep:axum"]
 tokio-console = ["dep:console-subscriber"]
