--- a/playground/Dockerfile.sourcify
+++ b/playground/Dockerfile.sourcify
@@ -1,9 +1,19 @@
 FROM node:24-bookworm-slim
 
-# Install dependencies
+# Install dependencies (architecture-aware for ARM64/AMD64 compatibility)
 RUN apt-get update && apt-get install -y git curl postgresql-client && \
-    curl -fsSL -o /usr/local/bin/dbmate https://github.com/amacneil/dbmate/releases/download/v2.21.0/dbmate-linux-amd64 && \
+    DPKG_ARCH=$(dpkg --print-architecture) && \
+    case "${DPKG_ARCH}" in \
+        amd64) DBMATE_ARCH="amd64" ;; \
+        arm64) DBMATE_ARCH="arm64" ;; \
+        i386)  DBMATE_ARCH="386" ;; \
+        armhf) DBMATE_ARCH="arm" ;; \
+        *) echo "Unsupported architecture: ${DPKG_ARCH}" && exit 1 ;; \
+    esac && \
+    echo "Downloading dbmate for architecture: ${DBMATE_ARCH} (detected: ${DPKG_ARCH})" && \
+    curl -fsSL -o /usr/local/bin/dbmate https://github.com/amacneil/dbmate/releases/download/v2.21.0/dbmate-linux-${DBMATE_ARCH} && \
     chmod +x /usr/local/bin/dbmate && \
+    dbmate --version && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Clone Sourcify with submodules
