[M1] Add Otterscan & Sourcify integration to playground (#4000)
## Summary

This PR delivers **Milestone 1: Otterscan Integration** of the [CoW
Grants Program RFP: CoW Protocol Playground Block Explorer
Integration](https://forum.cow.fi/t/grant-application-cow-protocol-playground-block-explorer-integration/3284/1)
proposal by CoBuilders.

Integrates Otterscan block explorer with Sourcify contract verification
into the CoW Protocol Playground, enabling developers to browse
transactions and view verified contract source code locally.


![demo_m1_cowswap](https://github.com/user-attachments/assets/0c133ebe-6b9e-44e1-a265-dc289c51f035)

## Milestone 1 Deliverables

### Otterscan Integration
- [x] Seamless Otterscan integration into existing Docker Compose (fork
and non-interactive modes)
- [x] Production-ready configuration with optimized settings for Anvil
- [x] Service networking and dependencies configured
- [x] All Otterscan features working correctly (traces, gas profiling,
contract viewing)

### Contract Verification Setup
- [x] Otterscan configured to support contract verification
- [x] Option to use local Sourcify service OR default Sourcify endpoints
(`SOURCIFY_MODE` env var)
- [x] Verification working with both approaches
- [x] Configuration options documented

### Success Criteria
> *"Otterscan is fully functional with all debugging features available,
and contract verification is working."*

- Otterscan available at `http://localhost:8003`
- Local Sourcify available at `http://localhost:5555`
- Contract verification via Foundry or Sourcify API
- Verified source code viewable in Otterscan

## Commits

| Commit | Description |
|--------|-------------|
| `872d4db` | Added Otterscan to docker-compose files |
| `d6e322b` | Merge remote-tracking branch 'origin' |
| `3c11ff2` | Fix Dockerfile |
| `6e8acb6` | Update Otterscan readme details |
| `8519ffa` | Sourcify included in docker-compose |
| `98fa7ec` | Sourcify cleanup |
| `ff75c1f` | Update docker-compose.fork

--- a/playground/.env.example
+++ b/playground/.env.example
@@ -6,3 +6,8 @@ POSTGRES_PASSWORD=123
 TOML_TRACE_ERROR=1
 CHAIN=1
 ETHFLOW_CONTRACTS=0x04501b9b1d52e67f6862d157e00d13419d2d6e95
+
+# Otterscan Sourcify source: "cloud" (default) or "local"
+# - cloud: Shows publicly verified contracts from sourcify.dev
+# - local: Shows contracts verified on the local Sourcify instance
+SOURCIFY_MODE=cloud
