--- a/playground/docker-compose.fork.yml
+++ b/playground/docker-compose.fork.yml
@@ -212,6 +212,65 @@ services:
     ports:
       - 8000:80
 
+  # Sourcify - Contract verification service
+  sourcify-db:
+    image: postgres:16
+    restart: always
+    environment:
+      - POSTGRES_USER=sourcify
+      - POSTGRES_PASSWORD=sourcify
+      - POSTGRES_DB=sourcify
+    volumes:
+      - sourcify-postgres:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U sourcify"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  sourcify:
+    build:
+      context: .
+      dockerfile: Dockerfile.sourcify
+    restart: always
+    depends_on:
+      sourcify-db:
+        condition: service_healthy
+    environment:
+      - SOURCIFY_POSTGRES_HOST=sourcify-db
+      - SOURCIFY_POSTGRES_PORT=5432
+      - SOURCIFY_POSTGRES_USER=sourcify
+      - SOURCIFY_POSTGRES_PASSWORD=sourcify
+      - SOURCIFY_POSTGRES_DB=sourcify
+      - NODE_ENV=development
+    volumes:
+      - ./sourcify-chains.json:/sourcify/services/server/dist/sourcify-chains.json
+    ports:
+      - 5555:5555
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5555/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
+  otterscan:
+    build:
+      context: .
+      dockerfile: Dockerfile.otterscan
+    restart: always
+    environment:
+      - ERIGON_URL=http://127.0.0.1:8545
+      - SOURCIFY_MODE=${SOURCIFY_MODE:-cloud}
+      - LOCAL_SOURCIFY_URL=http://sourcify:5555
+    ports:
+      - 8003:80
+    depends_on:
+      chain:
+        condition: service_healthy
+      sourcify:
+        condition: service_healthy
+
   explorer:
     build:
       context: .
@@ -252,3 +311,4 @@ services:
 
 volumes:
   postgres:
+  sourcify-postgres:
