Hopefully fix stuck index migration

--- a/database/conf/flyway.conf
+++ b/database/conf/flyway.conf
@@ -1,3 +1,5 @@
 # Flyway was introduced after V003. Therefore assume this version if table is not empty and there is no version information
 flyway.baselineOnMigrate=true
 flyway.baselineVersion=3
+# required to allow building indexes concurrently within a migration
+flyway.postgresql.transactional.lock=false
