--- a/playground/driver.toml
+++ b/playground/driver.toml
@@ -1,3 +1,5 @@
+tx-gas-limit = "45000000"
+
 [[solver]]
 name = "baseline" # Arbitrary name given to this solver, must be unique
 endpoint = "http://baseline"
