use `http-body::Limited` to enforce the request limit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ flate2 = "1.0.30"
 futures = "0.3.30"
 const-hex = "1.17.0"
 hex-literal = "0.4.1"
+http-body = "0.4.6"
 humantime = "2.1.0"
 humantime-serde = "1.1.1"
 hyper = "0.14.29"
