--- a/crates/refunder/Cargo.toml
+++ b/crates/refunder/Cargo.toml
@@ -28,6 +28,11 @@ tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
 tracing = { workspace = true }
 url = { workspace = true }
 
+[dev-dependencies]
+mockall = { workspace = true }
+rand = { workspace = true }
+rstest = { workspace = true }
+
 [lints]
 workspace = true
 
