--- a/crates/autopilot/Cargo.toml
+++ b/crates/autopilot/Cargo.toml
@@ -40,8 +40,8 @@ humantime = { workspace = true }
 indexmap = { workspace = true }
 itertools = { workspace = true }
 mimalloc = { workspace = true, optional = true }
-tikv-jemallocator = { workspace = true }
 model = { workspace = true }
+moka = { workspace = true, features = ["future"] }
 num = { workspace = true }
 number = { workspace = true }
 order-validation = { workspace = true }
@@ -57,6 +57,7 @@ serde_with = { workspace = true }
 shared = { workspace = true }
 sqlx = { workspace = true }
 strum = { workspace = true }
+tikv-jemallocator = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
 tokio-stream = { workspace = true }
