Revert "fix(playground): auto-detect package manager for cowswap builds"
This reverts commit 9af2576ec9cdd5d958328d850fd66084c51d4afc.

--- a/playground/Dockerfile.cowswap
+++ b/playground/Dockerfile.cowswap
@@ -22,17 +22,8 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked apt-get update && \
 RUN git clone https://github.com/cowprotocol/cowswap . && \
     git submodule update --init --recursive
 
-# Enable Corepack for automatic package manager version management
-RUN corepack enable
-
-# Install npm dependencies (auto-detect yarn vs pnpm from package.json)
-RUN PKG_MANAGER=$(node -p "require('./package.json').packageManager?.split('@')[0] || 'yarn'") && \
-    echo "Detected package manager: $PKG_MANAGER" && \
-    if [ "$PKG_MANAGER" = "pnpm" ]; then \
-        pnpm install --frozen-lockfile; \
-    else \
-        yarn install --frozen-lockfile --no-cache; \
-    fi
+# Install npm dependencies
+RUN yarn install --frozen-lockfile --no-cache
 
 # Set the environment variable "chain"
 ARG CHAIN
@@ -52,7 +43,6 @@ ENV REACT_APP_BLOCK_EXPLORER_URL=$REACT_APP_BLOCK_EXPLORER_URL
 
 # Update environment variables based on "chain" and "ETH_RPC_URL" and build the frontend
 RUN if [ -n "$ETH_RPC_URL" ]; then \
-        PKG_MANAGER=$(node -p "require('./package.json').packageManager?.split('@')[0] || 'yarn'") && \
         case "$CHAIN" in \
             1) \
                 REACT_APP_NETWORK_URL_1=$ETH_RPC_URL \
@@ -67,7 +57,7 @@ RUN if [ -n "$ETH_RPC_URL" ]; then \
                 REACT_APP_ORDER_BOOK_URLS=$(echo $REACT_APP_ORDER_BOOK_URLS | jq --arg chain "100" '.[$chain]="http://127.0.0.1:8080"') \
                 ;; \
         esac; \
-        NODE_OPTIONS="--max-old-space-size=4096" NX_NO_CLOUD=true $PKG_MANAGER build --env REACT_APP_NETWORK_URL_1=$REACT_APP_NETWORK_URL_1 \
+        NODE_OPTIONS="--max-old-space-size=4096" NX_NO_CLOUD=true yarn build --env REACT_APP_NETWORK_URL_1=$REACT_APP_NETWORK_URL_1 \
                    --env REACT_APP_NETWORK_URL_5=$REACT_APP_NETWORK_URL_5 \
                    --env REACT_APP_NETWORK_URL_100=$REACT_APP_NETWORK_URL_100 \
                    --env REACT_APP_ORDER_BOOK_URLS="$REACT_APP_ORDER_BOOK_URLS" \
