--- a/playground/docker-compose.fork.yml
+++ b/playground/docker-compose.fork.yml
@@ -131,7 +131,7 @@ services:
       - TOKIO_CONSOLE_RETENTION=600sec
       - TOKIO_CONSOLE_BIND=0.0.0.0:6669
       - SETTLEMENT_CONTRACT_ADDRESS=0x99B14b6C733a8E2196d5C561e6B5F6f083F4a7f9
-      - FILTER_BYPASS_APP_DATA_SOURCES="Euler"
+      - FILTER_BYPASS_APP_DATA_SOURCES=Euler
     volumes:
       - ../:/src
     depends_on:
