Mount flyway.conf in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,9 @@ services:
       - type: bind
         source: ./database/sql/
         target: /flyway/sql
+      - type: bind
+        source: ./database/conf/
+        target: /flyway/conf
 
 volumes:
   postgres:
