--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -46,6 +46,7 @@ rust_decimal = { workspace = true, features = ["maths"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
+solvers-dto = { workspace = true }
 strum = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["macros", "time", "signal"] }
