Use shared::domain::eth in the driver

--- a/crates/driver/Cargo.toml
+++ b/crates/driver/Cargo.toml
@@ -44,6 +44,7 @@ prometheus = { workspace = true }
 prometheus-metric-storage = { workspace = true }
 rand = { workspace = true }
 reqwest = { workspace = true }
+simulator = { workspace = true }
 s3 = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde-ext = { workspace = true }
