--- a/crates/driver/Cargo.toml
+++ b/crates/driver/Cargo.toml
@@ -46,6 +46,7 @@ rand = { workspace = true }
 reqwest = { workspace = true }
 s3 = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
+serde-ext = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
 solvers-dto = { path = "../solvers-dto" }
