Allow multiple parallel settlements from 1 solver

--- a/crates/contracts/solidity/Makefile
+++ b/crates/contracts/solidity/Makefile
@@ -17,7 +17,7 @@ CONTRACTS := \
 	Trader.sol
 ARTIFACTS := $(patsubst %.sol,$(ARTIFACTDIR)/%.json,$(CONTRACTS))
 
-TEST_CONTRACTS := Counter.sol GasHog.sol NonStandardERC20Balances.sol RemoteERC20Balances.sol
+TEST_CONTRACTS := Counter.sol Forwarder.sol GasHog.sol NonStandardERC20Balances.sol RemoteERC20Balances.sol
 TEST_ARTIFACTS := $(patsubst %.sol,$(ARTIFACTDIR)/%.json,$(TEST_CONTRACTS))
 
 .PHONY: artifacts
