--- a/crates/autopilot/Cargo.toml
+++ b/crates/autopilot/Cargo.toml
@@ -63,8 +63,9 @@ tokio-stream = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true, features = ["trace"] }
 tracing = { workspace = true }
-url = { workspace = true }
+url = { workspace = true, features = ["serde"] }
 winner-selection = { workspace = true }
+toml = { workspace = true }
 
 [dev-dependencies]
 maplit = { workspace = true }
