--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -53,6 +53,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time"] }
 url = { workspace = true }
 
+moka = { workspace = true, features = ["sync"] }
 mockall = { workspace = true, optional = true }
 
 [dev-dependencies]
