--- a/crates/autopilot/Cargo.toml
+++ b/crates/autopilot/Cargo.toml
@@ -66,12 +66,14 @@ tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 winner-selection = { workspace = true }
 toml = { workspace = true }
+tempfile = { workspace = true, optional = true }
 
 [dev-dependencies]
 maplit = { workspace = true }
 mockall = { workspace = true }
 tokio = { workspace = true, features = ["test-util"] }
 shared = { workspace = true, features = ["test-util"] }
+tempfile = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
@@ -83,3 +85,4 @@ workspace = true
 [features]
 mimalloc-allocator = ["dep:mimalloc"]
 tokio-console = ["observe/tokio-console"]
+test-util = ["dep:tempfile"]
