Optimize `/solve` request serialization in autopilot

--- a/crates/autopilot/Cargo.toml
+++ b/crates/autopilot/Cargo.toml
@@ -19,6 +19,7 @@ alloy = { workspace = true, features = ["rand", "provider-debug-api", "provider-
 app-data = { workspace = true }
 axum = { workspace = true }
 bytes-hex = { workspace = true } # may get marked as unused but it's used with serde
+bytes = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 bigdecimal = { workspace = true }
@@ -47,7 +48,7 @@ order-validation = { workspace = true }
 prometheus = { workspace = true }
 prometheus-metric-storage = { workspace = true }
 rand = { workspace = true }
-reqwest = { workspace = true, features = ["gzip", "json"] }
+reqwest = { workspace = true, features = ["gzip", "json", "stream"] }
 rust_decimal = { workspace = true }
 s3 = { workspace = true }
 serde = { workspace = true }
