--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ autopilot = { path = "crates/autopilot" }
 aws-config = "1.5.1"
 aws-sdk-s3 = { version = "1.34.0", default-features = false }
 bytes-hex = { path = "crates/bytes-hex" }
+bytes = "1.11.1"
 chain = { path = "crates/chain" }
 console-subscriber = "0.3.0"
 const_format = "0.2.32"
