--- a/crates/e2e/Cargo.toml
+++ b/crates/e2e/Cargo.toml
@@ -31,7 +31,7 @@ model = { workspace = true, features = ["e2e"] }
 number = { workspace = true }
 observe = { workspace = true }
 orderbook = { workspace = true, features = ["e2e"] }
-reqwest = { workspace = true, features = ["blocking"] }
+reqwest = { workspace = true, features = ["blocking", "query"] }
 serde_json = { workspace = true }
 shared = { workspace = true }
 solver = { workspace = true }
