Compress S3 body in blocking task

--- a/crates/s3/Cargo.toml
+++ b/crates/s3/Cargo.toml
@@ -12,6 +12,7 @@ aws-sdk-s3 = { workspace = true, features = ["rustls", "rt-tokio"] }
 flate2 = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+tokio = { workspace = true }
 
 [dev-dependencies]
 chrono = { workspace = true, features = ["clock"] }
