--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@ order-validation = { path = "crates/order-validation" }
 opentelemetry = { version = "0.31", features = ["tracing"] }
 opentelemetry-otlp = "0.31"
 opentelemetry_sdk = "0.31"
+opentelemetry-http = { version = "0.31", default-features = false } # disable internal-logging
 orderbook = { path = "crates/orderbook" }
 paste = "1.0"
 pin-project-lite = "0.2.14"
