--- a/crates/observe/Cargo.toml
+++ b/crates/observe/Cargo.toml
@@ -27,6 +27,7 @@ tracing-opentelemetry = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time"] }
 tracing-serde = { workspace = true }
 jemalloc_pprof = { workspace = true }
+opentelemetry-http = { workspace = true }
 
 [lints]
 workspace = true
