--- a/playground/docker-compose.non-interactive.yml
+++ b/playground/docker-compose.non-interactive.yml
@@ -82,7 +82,7 @@ services:
       - ENABLE_EIP1271_ORDERS=true
       - PRICE_ESTIMATORS=None
       - PRICE_ESTIMATION_DRIVERS=baseline|http://driver/baseline,baseline2|http://driver2/baseline2
-      - NATIVE_PRICE_ESTIMATORS=Driver|baseline|http://driver/baseline,baseline2|http://driver2/baseline2
+      - NATIVE_PRICE_ESTIMATORS=Driver|baseline|http://driver/baseline,Driver|baseline2|http://driver2/baseline2
       - DRIVERS=baseline|http://driver/baseline,baseline2|http://driver2/baseline2
       - BIND_ADDRESS=0.0.0.0:80
       - CHAIN_ID=$CHAIN
@@ -123,8 +123,8 @@ services:
       - NATIVE_PRICE_CACHE_MAX_AGE=20m
       - SOLVER_TIME_LIMIT=5
       - PRICE_ESTIMATION_DRIVERS=baseline|http://driver/baseline,baseline2|http://driver2/baseline2
-      - NATIVE_PRICE_ESTIMATORS=Driver|baseline|http://driver/baseline,baseline2|http://driver2/baseline2
-      - DRIVERS=baseline|http://driver/baseline|0xa0Ee7A142d267C1f36714E4a8F75612F20a79720,baseline2|http://driver2/baseline2|0x14dC79964da2C08b23698B3D3cc7Ca32193d9955
+      - NATIVE_PRICE_ESTIMATORS=Driver|baseline|http://driver/baseline,Driver|baseline2|http://driver2/baseline2
+      - CONFIG=/autopilot.toml
       - SKIP_EVENT_SYNC=true
       - BASELINE_SOURCES=None
       - RUST_BACKTRACE=1
@@ -136,6 +136,7 @@ services:
       - TOKIO_CONSOLE_BIND=0.0.0.0:6669
     volumes:
       - ../:/src
+      - ./autopilot.toml:/autopilot.toml
     depends_on:
       orderbook:
         condition: service_started
