--- a/playground/Dockerfile.chain
+++ b/playground/Dockerfile.chain
@@ -1,3 +1,3 @@
-FROM ghcr.io/foundry-rs/foundry:stable
+FROM ghcr.io/foundry-rs/foundry:v1.5.1
 USER root
 RUN apt-get update && apt-get install -y wget
