--- a/crates/driver/Cargo.toml
+++ b/crates/driver/Cargo.toml
@@ -52,7 +52,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
 toml = { workspace = true }
 tower = { workspace = true }
-tower-http = { workspace = true, features = ["decompression-gzip", "limit", "trace"] }
+tower-http = { workspace = true, features = ["decompression-br", "limit", "trace"] }
 url = { workspace = true, features = ["serde"] }
 
 # These still use { workspace = true } because they're used at
