--- a/playground/docker-compose.fork.yml
+++ b/playground/docker-compose.fork.yml
@@ -15,16 +15,19 @@ services:
       # with simple bytecode that always returns a solidity `true` value, alleviating
       # the requirement to register a solver's private key for the sake of testing on
       # a fork.
-      test: [ "CMD-SHELL", "
+      test: [
+          "CMD-SHELL",
+          "
           response=$$(wget -qO- --header='Content-Type: application/json' --post-data='{\"jsonrpc\":\"2.0\", \"method\":\"eth_blockNumber\", \"params\":[], \"id\":1}' http://127.0.0.1:8545);
           block=$$(echo $$response | sed -n 's/.*\"result\":\"\\([^\"\\]*\\)\".*/\\1/p');
           if [ -n \"$$block\" ] && [ \"$$block\" != \"0x0\" ] && [ \"$$block\" != \"null\" ]; then
-            /usr/local/bin/cast rpc -r http://127.0.0.1:8545 anvil_setCode 0x2c4c28DDBdAc9C5E7055b4C863b72eA0149D8aFE 0x600160005260206000F3;
-            exit 0;
+          /usr/local/bin/cast rpc -r http://127.0.0.1:8545 anvil_setCode 0x2c4c28DDBdAc9C5E7055b4C863b72eA0149D8aFE 0x600160005260206000F3;
+          exit 0;
           else
-            exit 1;
+          exit 1;
           fi;
-        " ]
+          ",
+        ]
       interval: 5s
       timeout: 30s
       retries: 5
@@ -68,23 +71,24 @@ services:
       target: localdev
       dockerfile: ./playground/Dockerfile
     restart: always
-    command: ["cargo", "watch", "-x", "run --bin orderbook"]
+    command:
+      [
+        "cargo",
+        "watch",
+        "-x",
+        "run --bin orderbook -- --config configs/${ENV}/orderbook.toml",
+      ]
     environment:
       - NODE_URL=http://chain:8545
       - DB_WRITE_URL=postgres://db:5432/?user=${POSTGRES_USER}&password=${POSTGRES_PASSWORD}
       - DB_READ_URL=postgres://db:5432/?user=${POSTGRES_USER}&password=${POSTGRES_PASSWORD}
-      - ACCOUNT_BALANCES_SIMULATION=true
-      - ACCOUNT_BALANCES_SIMULATOR=Web3
       - SIMULATION_NODE_URL=http://chain:8545
-      - EIP1271_SKIP_CREATION_VALIDATION=true
       - ENABLE_EIP1271_ORDERS=true
-      - PRICE_ESTIMATORS=None
       - PRICE_ESTIMATION_DRIVERS=baseline|http://driver/baseline
       - NATIVE_PRICE_ESTIMATORS=Driver|baseline|http://driver/baseline
       - DRIVERS=baseline|http://driver/baseline
       - BIND_ADDRESS=0.0.0.0:80
       - CHAIN_ID=$CHAIN
-      - BASELINE_SOURCES=None
       - RUST_BACKTRACE=1
       - TOML_TRACE_ERROR=1
       - TRACING_COLLECTOR_ENDPOINT=http://tempo:4317
@@ -106,25 +110,24 @@ services:
       target: localdev
       dockerfile: ./playground/Dockerfile
     restart: always
-    command: ["cargo", "watch", "-x", "run --bin autopilot"]
+    command:
+      [
+        "cargo",
+        "watch",
+        "-x",
+        "run --bin autopilot -- --config configs/${ENV}/autopilot.toml",
+      ]
     environment:
       - DB_WRITE_URL=postgres://db:5432/?user=${POSTGRES_USER}&password=${POSTGRES_PASSWORD}
       - DB_READ_URL=postgres://db:5432/?user=${POSTGRES_USER}&password=${POSTGRES_PASSWORD}
       - LOG_FILTER=warn,autopilot=debug,shared=info,shared::price_estimation=info
       - NODE_URL=http://chain:8545
       - SIMULATION_NODE_URL=http://chain:8545
-      - SETTLE_INTERVAL=15s
-      - GAS_ESTIMATORS=Web3
-      - PRICE_ESTIMATORS=None
+      - GAS_ESTIMATORS=Web3,Alloy
       - BLOCK_STREAM_POLL_INTERVAL=1s
-      - NATIVE_PRICE_CACHE_MAX_UPDATE_SIZE=100
       - NATIVE_PRICE_CACHE_MAX_AGE=20m
-      - SOLVER_TIME_LIMIT=5
       - PRICE_ESTIMATION_DRIVERS=baseline|http://driver/baseline
-      - NATIVE_PRICE_ESTIMATORS=Driver|baseline|http://driver/baseline
-      - DRIVERS=baseline|http://driver/baseline|0xa0Ee7A142d267C1f36714E4a8F75612F20a79720
       - SKIP_EVENT_SYNC=true
-      - BASELINE_SOURCES=None
       - RUST_BACKTRACE=1
       - TOML_TRACE_ERROR=1
       - ETHFLOW_CONTRACTS
